# newagentic-plan-server

./: .gcloudignore  .gitignore  COMPARISON.md  Dockerfile  LIVE_DEMO_30MIN.md  LIVE_DEMO_SCRIPT.md  PRESENTATION_SCRIPT.md  README.md  check_apps.py  dashboard.py  demo_prompts.txt  deploy.ps1  deploy_docker.ps1  deploy_output.txt  pyproject.toml  test_connection.py  test_debug.py  touch_files.py
.claude/: settings.local.json
cli/: fastmcp_stdio.py  interactive.py
data/: valid_intersections.json
planning_agent/: __main__.py  agent.py  config.py  fastmcp_server.py  runtime.py  session.py
planning_agent/client/: planning_client.py
planning_agent/intelligence/: __init__.py  context_memory.py  expertise.py  intent_classifier.py  llm_reasoning.py  orchestrator.py  planner.py
planning_agent/pipeline/: __init__.py  adk_adapter.py  adk_planner.py  claude_adapter.py  claude_planner.py  engine.py  heuristic_planner.py  planner.py  registry.py  types.py
planning_agent/services/: __init__.py  personalization_service.py  semantic_search.py
planning_agent/tools/: __init__.py  data.py  discovery.py  exploration.py  feedback.py  inference.py  memo.py  personalization.py  valid_intersections.py
planning_agent/utils/: metadata_cache.py
tests/: test_adk_adapter.py  test_claude_adapter.py
web/: __init__.py  server.py
web/static/: app.js  index.html
